--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "^0.73.6",
+    "react-native-tts": "^4.1.0",
+    "tts": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
